# bindicator

./: .gitignore  Makefile  README.md  pyproject.toml
.circleci/: config.yml
bindicator/: bins.py  config.py  main.py
terraform/: circleci.tf  cloudwatch.tf  iam-ci.tf  lambda.tf  providers.tf  sentry.tf  ssm.tf  terraform.tf  variables.tf
tests/bindicator/: test_bins.py  test_main.py
