[tool.poetry]
name = "bindicator"
version = "0.1.0"
description = "Control Meross Smart Bulbs (msl120d) to display which colour bins to put out."
authors = ["Dom Weldon <dom.weldon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
meross-iot = "^0.4.0"
pydantic = "^1.7.3"
boto3 = "^1.16.56"
lxml = "^4.6.2"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]
bpython = "^0.20.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.9.3"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
